--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
 <body>
 <div class="content">
     <div class="search">
-        <form action="" class="search-form">
-            <input type="text" placeholder="name == 'test' && age > 19" class="search-input">
+        <div class="search-form">
+            <input type="text" placeholder="name == 'test' && age > 19" class="search-input" value="">
             <div class="info-div">
                 <input type="text" id="host" placeholder="host" class="info-input" value="127.0.0.1">
                 <input type="text" id="port" placeholder="port" class="info-input" value="27017">
@@ -28,7 +28,7 @@
                     </select>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
     <div class="table-list">
         <table class="data-list">
