--- a/statics/css/index.css
+++ b/statics/css/index.css
@@ -1,3 +1,4 @@
+
 html, body {
     width: 100%;
     height: 100%;
@@ -220,10 +221,11 @@ table tr:last-child td:last-child {
 .th-center {
     /*width: 75%;*/
     /*text-align: left;*/
+    width: 80%;
 }
 
 .th-right {
-    width: 15%;
+    width: 20%;
 }
 
 .data-list button {
@@ -279,7 +281,7 @@ table tr:last-child td:last-child {
 
 
 .pagination {
-    padding: 1em 4em 0 0;
+    padding: 0 4em 0 0;
     text-align: right;
     height: 4%;
 }
@@ -295,6 +297,7 @@ table tr:last-child td:last-child {
     cursor: pointer;
     background-color: #ffffff;
     border: 1px dashed #252525;
+    font-size: 14px;
 }
 
 .pagination > li:last-child > button, .pagination > li:last-child > span {
@@ -304,6 +307,7 @@ table tr:last-child td:last-child {
     cursor: pointer;
     background-color: #ffffff;
     border: 1px dashed #585858;
+    font-size: 14px;
 }
 
 .pagination > li:first-child > button:hover, .pagination > li:first-child > span:hover {
