--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,7 @@
             <button id="next_page" value="">next</button>
         </li>
     </ul>
+    <footer>powered by lynn@2020</footer>
 </div>
 <div class="container">
     <div id="myModel">
